[package]
name = "nuttx-pr-bot"
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
description = "LLM Bot that reviews Pull Requests for Apache NuttX RTOS"
homepage = "https://lupyuen.codeberg.page/articles/llm.html"
repository = "https://github.com/lupyuen/nuttx-pr-bot"
readme = "README.md"
keywords = ["nuttx", "rtos", "llm", "pr", "gemini"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
google-generative-ai-rs = { version = "0.3.2", features = ["beta"] }
log = "0.4.22"
octocrab = "0.39.0"
tokio = "1.40.0"
